# ZKTeco-LAN-Agent

./: .gitignore  README.md  pyproject.toml
src/zkteco_lan_agent/: __init__.py  __main__.py  attendance.py  command_executor.py  config.py  device_worker.py  server_client.py  state.py
tests/: test_agent.py
