[project]
name = "zkteco-lan-agent"
version = "1.1.0"
description = "Bridge non-ADMS ZKTeco devices to Fitssort ADMS HTTP (attendance, commands, enroll)"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "Proprietary" }
authors = [
  { name = "Md. Musfiqur Rahaman / MusfiqDehan" },
]
keywords = ["zkteco", "adms", "attendance", "fitssort", "biometric"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Networking",
]
dependencies = [
  "zk>=0.9",
  "requests>=2.28",
  "PyYAML>=6.0",
]

# Note: dependency `zk` → `thriftpy2` has no wheels for Python 3.14 yet.
# Prefer Python 3.12. If you must compile: sudo apt install python3-dev build-essential

[project.urls]
Homepage = "https://github.com/MusfiqDehan/zkteco_lan_agent"
Documentation = "https://github.com/MusfiqDehan/zkteco_lan_agent/README.md"
Repository = "https://github.com/MusfiqDehan/zkteco_lan_agent"

[project.scripts]
zkteco-lan-agent = "zkteco_lan_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zkteco_lan_agent"]

[tool.hatch.build.targets.sdist]
include = [
  "src/zkteco_lan_agent",
  "tests",
  "README.md",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
